全部博文同步

--- a/kexizeroing.github.io/Algorithm Basics.html
+++ b/kexizeroing.github.io/Algorithm Basics.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 4
-updatedDate: "Feb 21 2024"</h2>
+updatedDate: "May 19 2024"</h2>
 <h3>TOC</h3>
 <ul>
 <li><a href="#toc">TOC</a></li>
@@ -17,6 +17,7 @@ updatedDate: "Feb 21 2024"</h2>
 <li><a href="#insertion-sort">Insertion Sort</a></li>
 <li><a href="#quick-sort">Quick Sort</a></li>
 <li><a href="#merge-sort">Merge Sort</a></li>
+<li><a href="#linked-list">Linked List</a></li>
 <li><a href="#count-sort">Count Sort</a></li>
 <li><a href="#undoredo-stacks">Undo/Redo stacks</a></li>
 <li><a href="#shuffle-an-array">Shuffle an array</a></li>
@@ -194,6 +195,73 @@ function mergeSort(arr) {
   const right = arr.slice(split, arr.length);
 
   return merge(mergeSort(left), mergeSort(right));
+}
+</code></pre>
+<h3>Linked List</h3>
+<pre><code class="language-js">class ListNode {
+  constructor(value) {
+    this.value = value;
+    this.next = null;
+  }
+}
+
+// Basic operations for a linked list:
+// 1. Find the middle node of a linked list
+// 2. Check if a linked list has a cycle
+// 3. Reverse a linked list
+
+function getMiddleNode(head) {
+  if (head === null) {
+    return null;
+  }
+
+  let slow = head;
+  let fast = head;
+
+  while (fast !== null &amp;&amp; fast.next !== null) {
+    slow = slow.next;
+    fast = fast.next.next;
+  }
+
+  return slow;
+}
+
+function hasCycle(head) {
+  if (head === null || head.next === null) {
+    return false;
+  }
+
+  let slow = head;
+  let fast = head;
+
+  while (fast !== null &amp;&amp; fast.next !== null) {
+    slow = slow.next;
+    fast = fast.next.next;
+
+    if (slow === fast) {
+      return true;
+    }
+  }
+
+  return false;
+}
+
+function reverseList(head) {
+  if (head === null || head.next === null) {
+    return head;
+  }
+
+  let current = head;
+  let prev = null;
+
+  while (current !== null) {
+    const next = current.next;
+    current.next = prev;
+    prev = current;
+    current = next;
+  }
+
+  return prev;
 }
 </code></pre>
 <h3>Count Sort</h3>
@@ -732,20 +800,6 @@ LRUCache.prototype.put = function(key, value) {
   return [...hashTable.values()];
 };
 </code></pre>
-<p>Write a program to find the sum of contiguous subarray within a one-dimensional array of numbers that has the largest sum.</p>
-<pre><code class="language-js">var maxSubArraySum = function(nums) {
-  let curSum = 0;
-  let maxSum = nums[0];
-
-  for (let i = 0; i &lt; nums.length; i++) {
-    curSum = (nums[i] &gt; curSum + nums[i]) ? nums[i] : curSum + nums[i];
-    if (curSum &gt; maxSum) {
-      maxSum = curSum
-    }
-  }
-  return maxSum;
-}
-</code></pre>
 <p>Given a string, find the length of the longest substring without repeating characters.</p>
 <pre><code class="language-js">// slide window
 var lengthOfLongestSubstring = function(s) {
@@ -818,26 +872,6 @@ var subarraySum = function(nums, k) {
     } else {
       map.set(sum, 1);
     }
-  }
-  return res;
-};
-</code></pre>
-<p>Given an array nums of n integers where n &gt; 1, return an array output such that <code>output[i]</code> is equal to the product of all the elements of nums except <code>nums[i]</code>. i.e. Input: <code>[1,2,3,4]</code>; Output: <code>[24,12,8,6]</code>. Note: Please solve it without division and in <code>O(n)</code>.</p>
-<pre><code class="language-js">var productExceptSelf = function(nums) {
-  let res = [];
-  let n = nums.length;
-  res[0] = 1;
-  
-  // loop from the start
-  for (let i = 1; i &lt; n; i++) {
-    res[i] = res[i - 1] * nums[i - 1];
-  }
-  
-  // another loop from the end
-  let right = 1;
-  for (let i = n - 1; i &gt;= 0; i--) {
-    res[i] *= right;
-    right *= nums[i];
   }
   return res;
 };
