--- a/kexizeroing.github.io/JavaScript String, Array and Object.html
+++ b/kexizeroing.github.io/JavaScript String, Array and Object.html
@@ -571,7 +571,7 @@ Object.is(NaN, 0/0);  // true
 <ul>
 <li>The keys of an Object are String and Symbol, whereas they can be any value for a Map, including functions, objects, and any primitive.</li>
 <li>The keys in Map are ordered while keys added to object are not. Thus, when iterating over it, a Map object returns keys in order of insertion.</li>
-<li>You can get the size of a Map easily with the <code>size</code> property, while the number of properties in an Object must be determined manually.</li>
+<li>You can get the size of a Map easily with the <code>size</code> property, while the number of properties in an Object must be determined manually. (A Map is iterable, whereas a objects is not iterable.)</li>
 </ul>
 <pre><code class="language-js">var myMap = new Map();
 myMap.set(0, 'zero');
