--- a/yuanj.top/Linux 下安装 BUSCO.html
+++ b/yuanj.top/Linux 下安装 BUSCO.html
@@ -30,7 +30,7 @@ date: 2023-07-21 17:22:17</li>
 <p>BUSCO 官网上介绍说可以直接使用 conda 安装，但据我实践，是不可以的，需要手动安装诸多依赖</p>
 </blockquote>
 <h2>安装 conda</h2>
-<p>conda 的安装参考 <a href="https://www.hieroglyphs.top/posts/1d0dd329/">Linux 下安装 conda</a></p>
+<p>conda 的安装参考 <a href="https://www.yuanj.top/posts/1d0dd329/">Linux 下安装 conda</a></p>
 <h2>安装所需依赖</h2>
 <p>先创建一个 Python3.7 或 3.6 的环境</p>
 <pre><code class="language-bash">conda create -n busco python=3.7
