--- a/yuanj.top/WSL 搭建生信分析环境.html
+++ b/yuanj.top/WSL 搭建生信分析环境.html
@@ -29,7 +29,7 @@ slug: jdksf7d9</li>
 <li>默认安装在 C 盘，但可以自行下载安装包解压后安装在其他盘</li>
 </ul>
 <h2>WSL 的安装</h2>
-<p>参考我的文章 <a href="https://www.hieroglyphs.top/posts/309de741/">Windows10 &amp; 11 安装 WSL2</a></p>
+<p>参考我的文章 <a href="https://www.yuanj.top/posts/309de741/">Windows10 &amp; 11 安装 WSL2</a></p>
 <h2>WSL 的配置</h2>
 <p>此处默认以 Debian 系为例，我使用的是 Debian11</p>
 <h3>换源</h3>
@@ -50,7 +50,7 @@ slug: jdksf7d9</li>
 <pre><code class="language-bash">sudo apt-get install git
 </code></pre>
 <p><strong>conda</strong></p>
-<p>参考文章 <a href="https://www.hieroglyphs.top/posts/1d0dd329/">Linux 下安装 conda</a></p>
+<p>参考文章 <a href="https://www.yuanj.top/posts/1d0dd329/">Linux 下安装 conda</a></p>
 <p><strong>oh-my-zsh</strong></p>
 <p>更加美观、便捷的终端，使用清华镜像安装（需要先安装 Git）</p>
 <pre><code class="language-bash">git clone https://mirrors.tuna.tsinghua.edu.cn/git/ohmyzsh.git
@@ -69,7 +69,7 @@ sudo apt-get install nodejs
 </code></pre>
 <p>输入 neofetch 即可查看系统版本、CPU、内存等信息</p>
 <p><strong>其他</strong></p>
-<p><a href="https://www.hieroglyphs.top/posts/24ed802/">Linux 下安装 BUSCO</a></p>
+<p><a href="https://www.yuanj.top/posts/24ed802/">Linux 下安装 BUSCO</a></p>
 <h3>连接 VScode</h3>
 <p>安装最新版的 <a href="https://code.visualstudio.com/">Vscode</a>，然后在 VScode 的插件商店搜索并安装名为 WSL 的插件</p>
 <p>插件安装完成后在 WSL2 的终端中输入<code>code .</code>，等待下载相关文件后 VScode 便会自动打开，后面直接打开 VScode 就会自动启动 WSL2</p>
