根据git时间戳更新内容

--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -154,6 +154,7 @@ order: 2</h2>
 <p>What PWA Can Do Today: https://whatpwacando.today</p>
 <p>OCR PDFs and images directly in your browser: https://tools.simonwillison.net/ocr</p>
 <p>Comlink makes WebWorkers enjoyable: https://github.com/GoogleChromeLabs/comlink</p>
+<p>Web component JS frameworks overview by their syntax and features: https://component-party.dev</p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: https://egghead.io/courses/the-beginner-s-guide-to-react or https://www.youtube.com/watch?v=7_x4AuqHxlg</p>
@@ -172,6 +173,7 @@ order: 2</h2>
 <p>React from Another Dimension by Dan Abramov at RemixConf: https://www.youtube.com/watch?v=zMf_xeGPn6s</p>
 <p>Learn Next.js course by Vercel: https://nextjs.org/learn</p>
 <p>React's evolution from Hooks to Concurrent React: https://tigerabrodi.blog/reacts-evolution-from-hooks-to-concurrent-react</p>
+<p>Build Your Own React.js in 400 Lines of Code: https://webdeveloper.beehiiv.com/p/build-react-400-lines-code</p>
 <hr/>
 <h2>Vue and Vite ecosystem</h2>
 <p>Updates, tips &amp; opinions from the maintainers of Vue.js: https://blog.vuejs.org</p>
@@ -201,6 +203,7 @@ order: 2</h2>
 <p>Safari Release Notes: https://developer.apple.com/documentation/safari-release-notes/</p>
 <p>Firefox release notes: https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Releases</p>
 <p>New to the web platform (every month): https://web.dev/blog/web-platform-01-2024</p>
+<p>Monitor and track the status of all Web Platform features: https://webstatus.dev</p>
 <hr/>
 <h2>Awesome ChatGPT</h2>
 <p>OpenAI Cookbook: https://github.com/openai/openai-cookbook</p>
@@ -236,6 +239,7 @@ order: 2</h2>
 <p>Power your apps with real-time speech-to-text APIs: https://deepgram.com</p>
 <p>Run Hugging Face Transformers directly in the browser: https://github.com/xenova/transformers.js</p>
 <p>Framework for Multi AI Agents Systems: https://github.com/joaomdmoura/crewai</p>
+<p>A collection of guides and examples for the Gemini API: https://github.com/google-gemini/cookbook</p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Stanford CS229 Machine Learning: https://cs229.stanford.edu</p>
