--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -99,6 +99,8 @@ body:after {
 </li>
 <li><p>In order for the <code>postion: sticky</code> element to function correctly, it needs to have at least one of it's <code>top</code>, <code>right</code>, <code>left</code>, or <code>bottom</code> placement properties set. Also look for any <code>overflow</code> property set on any parents of the element. You can't use <code>overflow: hidden</code>, <code>overflow: auto</code>, or <code>overflow: scroll</code> on the parent of a <code>position: sticky</code> element.</p>
 </li>
+<li><p>If you are using <code>visible</code> for either <code>overflow-x</code> or <code>overflow-y</code> and something other than <code>visible</code> for the other, the <code>visible</code> value is interpreted as <code>auto</code>. (If one is set to <code>visible</code>, and the other to <code>auto</code> or <code>scroll</code>, then the <code>visible</code> is changed to <code>auto</code>.)</p>
+</li>
 <li><p>Position <code>fixed</code> doesn’t work with <code>transform</code> CSS property. It happens because transform creates a new coordinate system and your <code>position: fixed</code> element becomes fixed to that transformed element.</p>
 </li>
 <li><p>Center one and right/left align other element: Grid layout may be the cleanest and most efficient method. There is no need for absolute positioning or flexbox with fake elements.</p>
