--- a/kexizeroing.github.io/Learn from Advent of Vue 2022.html
+++ b/kexizeroing.github.io/Learn from Advent of Vue 2022.html
@@ -128,6 +128,9 @@ export function useTimeout = (fn, delay, options) =&gt; {
   })
 }
 </code></pre>
+<blockquote>
+<p>Each component instance calling <code>useMouse()</code> will create its own copies of x and y state so they won't interfere with one another. But if you put those values outside of the composable function, it will persist, like a basic state or store. When you need to access those values later somewhere else, they won't be reset everytime you call the composable.</p>
+</blockquote>
 <h3>Organize your Composition API code</h3>
 <p>We abandon the options API for the composition API, and the idea is not that we write everything the same way as the options API but not having the data/computed/watch options.</p>
 <pre><code class="language-js">// Common mistake: Grouping by options
