--- a/kexizeroing.github.io/Rendering performance.html
+++ b/kexizeroing.github.io/Rendering performance.html
@@ -116,6 +116,9 @@ window.performance.getEntriesByType('resource')
   .filter(({renderBlockingStatus}) =&gt; renderBlockingStatus === 'blocking')
   .forEach(({name}) =&gt; console.log(name))
 </code></pre>
+<blockquote>
+<p><code>blocking="render"</code> (added to <code>&lt;script&gt;</code> or <code>&lt;link&gt;</code>) is a way to mark a resource as required before anything is visually shown to the user. The browser should assign a high priority to any render-blocking resource by default.</p>
+</blockquote>
 <h3>The Speculation Rules API</h3>
 <ul>
 <li>https://developer.chrome.com/docs/web-platform/prerender-pages</li>
