--- a/xnum.github.io/健康的堅果種類選擇.html
+++ b/xnum.github.io/健康的堅果種類選擇.html
@@ -12,12 +12,12 @@ description: 最近研究的堅果種類選擇筆記</h2>
 </ul>
 <p>經過研究幾篇文章<a href="https://www.facebook.com/AliceChenRose/posts/1658593174204759/">1</a> <a href="https://www.seeberger.com.tw/%E7%94%9F%E9%85%AE%E5%A0%85%E6%9E%9C%E6%80%8E%E9%BA%BC%E6%8C%91%EF%BC%9F/">2</a>後的排名是：</p>
 <ol>
-<li>夏威夷豆 (macadamia)</li>
-<li>胡桃 (pecans)</li>
-<li>核桃 (walnuts)</li>
-<li>榛果 (hazelnut)</li>
-<li>巴西堅果 (Brazil Nuts 建議食用量一天一顆 <a href="https://www.foodnext.net/issue/paper/5975245834">3</a>)</li>
+<li>夏威夷豆 (macadamia) 6:1 FII:5%</li>
+<li>胡桃 (pecans) 21:1 FII:5%</li>
+<li>核桃 (walnuts) 4:1 FII:9%</li>
 </ol>
+<p>~~4. 榛果 (hazelnut)~~</p>
+<p>~~5. 巴西堅果 (Brazil Nuts 建議食用量一天一顆 <a href="https://www.foodnext.net/issue/paper/5975245834">3</a>)~~</p>
 <p>另外也可以參考胰島素指數選擇比較優良的種類 <a href="http://www.relativehumanity.com.tw/Insulin%20index%20chart(1">4</a>.htm)</p>
 <h3>其他注意事項</h3>
 <ul>
@@ -25,3 +25,6 @@ description: 最近研究的堅果種類選擇筆記</h2>
 <li>冷藏或冷凍保存，避免黃麴毒素產生。</li>
 <li>每天食用量約20g-30g。</li>
 </ul>
+<p>2024/05/28 更新</p>
+<p>根據 https://en.wikipedia.org/wiki/Fatty_acid_ratio_in_food 刪除了榛果
+另外巴西堅果的每日消耗量太少，也刪除</p>
