--- a/f2h2h1.github.io/把网页导出成PDF.html
+++ b/f2h2h1.github.io/把网页导出成PDF.html
@@ -15,7 +15,7 @@
 </li>
 </ol>
 </li>
-<li>在后用 headless 浏览器生成 PDF<ol>
+<li>在后台用 headless 浏览器生成 PDF<ol>
 <li>直接使用命令行生成<ul>
 <li>这种方式实现起来也很简单，但会占用服务器资源，生成速度不及在前端调用 print 事件，对 spa 的支持也不是很好，可能会遗漏一些内容</li>
 </ul>
@@ -88,8 +88,9 @@ a 标签
 </li>
 <li>如果想让生成的 PDF 样式保持一致，最好还是在后台生成。但笔者认为，大部分情况下浏览器之间微小的差异是可以忽略的。</li>
 </ol>
-<h2>示例的代码</h2>
-<pre><code>(function(){
+<h2>示例代码</h2>
+<h3>使用 window.print 事件来生成 PDF</h3>
+<pre><code class="language-JavaScript">(function(){
     let printCode = `&lt;h1&gt;test&lt;/h1&gt;`;
     var iframe = document.createElement("iframe");
     iframe.id = 'iframe_print_' + Math.round(new Date().getTime());
@@ -97,18 +98,211 @@ a 标签
     document.body.appendChild(iframe);
     iframe.contentWindow.document.write(printCode); // 一定要用 write 方法， innerHTML 属性有时会打印失败
     iframe.contentWindow.focus();
-    iframe.contentWindow.print();
-    setTimeout(function(){
-        // 如果还没渲染完pdf就移除 iframe 的标签，会打印失败，等待的时间可以调整，甚至一直留着 iframe 标签都可以
-        document.getElementById(iframe.id).parentNode.removeChild(iframe);
-    }, 3000);
+    setTimeout(function() {
+        // 如果太快调用 print 方法，可能会因为节点未渲染完而导致pdf一片空白
+        iframe.contentWindow.print();
+        setTimeout(function() {
+            // 如果还没渲染完pdf就移除 iframe 的标签，会打印失败，等待的时间可以调整，甚至一直留着 iframe 标签都可以
+            document.getElementById(iframe.id).parentNode.removeChild(iframe);
+        }, 3000);
+    }, 1000);
 })();
 </code></pre>
+<p>把 markdown 转换成 html，再把html转换成 pdf</p>
+<pre><code class="language-html">&lt;!doctype html&gt;
+&lt;html&gt;
+&lt;head&gt;
+  &lt;meta charset="utf-8"/&gt;
+  &lt;title&gt;Marked in the browser&lt;/title&gt;
+  &lt;script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"&gt;&lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+  &lt;div&gt;
+  &lt;textarea id="content"&gt;# test&lt;/textarea&gt;
+  &lt;button id="convert"&gt;convert&lt;/button&gt;
+  &lt;/div&gt;
+  &lt;script&gt;
+    document.getElementById('convert').addEventListener('click', function() {
+      let printCode = marked.marked(document.getElementById('content').value);
+      var iframe = document.createElement("iframe");
+      iframe.id = 'iframe_print_' + Math.round(new Date().getTime());
+      iframe.style.display = 'none';
+      document.body.appendChild(iframe);
+      iframe.contentWindow.document.write(printCode); // 一定要用 write 方法， innerHTML 属性有时会打印失败
+      iframe.contentWindow.focus();
+      setTimeout(function() {
+            // 如果太快调用 print 方法，可能会因为节点未渲染完而导致pdf一片空白
+            iframe.contentWindow.print();
+            setTimeout(function() {
+                // 如果还没渲染完pdf就移除 iframe 的标签，会打印失败，等待的时间可以调整，甚至一直留着 iframe 标签都可以
+                document.getElementById(iframe.id).parentNode.removeChild(iframe);
+          }, 3000);
+      }, 1000);
+    });
+  &lt;/script&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+</code></pre>
+<h3>使用 jspdf 和 dom-to-image 这两个库来生成 PDF</h3>
+<p>这是先生成图片再生成pdf</p>
+<pre><code class="language-JavaScript">(function(){
+    function addScript(src) {
+        tmpNode = document.createElement("script");
+        tmpNode.src = src;
+        document.body.appendChild(tmpNode);
+    }
+    addScript("https://cdn.bootcdn.net/ajax/libs/dom-to-image/2.6.0/dom-to-image.js");
+    addScript("https://cdn.bootcdn.net/ajax/libs/jspdf/2.1.1/jspdf.umd.js");
+    setTimeout(()=&gt;{
+
+        domtoimage.toJpeg(document.body, { quality: 0.95, bgcolor: '#FFFFFF' })
+            .then(function (dataUrl) {
+
+                var image = new Image();
+                image.onload = function(){
+
+                    var contentWidth = image.width;
+                    var contentHeight = image.height;
+
+                    // 这是生成横向 A4
+                    // 一页pdf显示html页面生成的canvas高度;
+                    var pageHeight = 592.28;
+                    // 未生成pdf的html页面高度
+                    var leftHeight = contentHeight*(1-0.138);
+                    //pdf页面偏移
+                    var position = 0;
+                    //a4纸的尺寸[595.28,841.89]，html页面生成的canvas在pdf中图片的宽高
+                    var imgWidth = 841.89;
+                    var imgHeight = 841.89/contentWidth * contentHeight;
+  
+                    // 这是生成纵向 A4
+                    // //一页pdf显示html页面生成的canvas高度;
+                    // var pageHeight = contentWidth / 592.28 * 841.89;
+                    // //未生成pdf的html页面高度
+                    // var leftHeight = contentHeight;
+                    // //pdf页面偏移
+                    // var position = 0;
+                    // //a4纸的尺寸[595.28,841.89]，html页面生成的canvas在pdf中图片的宽高
+                    // var imgWidth = 595.28;
+                    // var imgHeight = 595.28/contentWidth * contentHeight;
+
+                    // var pageData = canvas.toDataURL('image/png', 1.0);
+  
+                    const { jsPDF } = window.jspdf;
+                    // var pdf = new jsPDF('', 'pt', 'a4');
+                    var pdf = new jsPDF('landscape', 'pt', 'a4');
+  
+                    //有两个高度需要区分，一个是html页面的实际高度，和生成pdf的页面高度(841.89)
+                    //当内容未超过pdf一页显示的范围，无需分页
+                    if (leftHeight &lt; pageHeight) {
+                        pdf.addImage(image, 'JPEG', 0, 0, imgWidth, imgHeight );
+                    } else {
+                        while(leftHeight &gt; 0) {
+                            pdf.addImage(image, 'JPEG', 0, position, imgWidth, imgHeight)
+                            leftHeight -= pageHeight;
+                            position -= 592.28;
+                            console.log(leftHeight, position);
+                            //避免添加空白页
+                            if(leftHeight &gt; 0) {
+                                pdf.addPage();
+                            }
+                        }
+                    }
+  
+                    pdf.save('content.pdf');
+
+                };
+                image.src = dataUrl;
+            });
+    }, 3000)
+})();
+
+// 用于应对 CSP ，一些情况下，通过控制台无法引用外部的js链接
+(function(){
+    // 检查是否存在 head 标签
+    if (!document.head) {
+        // 创建一个新的 head 标签
+        var head = document.createElement('head');
+        // 将新创建的 head 标签插入到 html 标签中
+        document.documentElement.insertBefore(head, document.documentElement.firstChild);
+    }
+    var meta = document.createElement('meta');
+    meta.setAttribute('http-equiv', 'Content-Security-Policy');
+    meta.setAttribute('content', 'script-src https://cdn.bootcdn.net');
+    // 将新创建的 meta 标签插入到 head 标签中
+    document.getElementsByTagName('head')[0].appendChild(meta);
+})();
+
+
+// 如果一些资源无法加载，例如 谷歌字体 这种，那么图片可能会生成失败
+(function(){
+    function addScript(src) {
+        tmpNode = document.createElement("script");
+        tmpNode.src = src;
+        document.body.appendChild(tmpNode);
+    }
+    addScript("https://cdn.bootcdn.net/ajax/libs/dom-to-image/2.6.0/dom-to-image.js");
+    setTimeout(()=&gt; {
+        domtoimage.toJpeg(document.body, { quality: 0.95, bgcolor: '#FFFFFF' })
+            .then(function (dataUrl) {
+                var link = document.createElement('a');
+                link.download = 'image-' + Date.now() + '.jpeg';
+                link.href = dataUrl; // 这是 base64 的字符串，好像直接用那种 blob 对象也可以
+                link.click();
+            });
+    }, 3000)
+})();
+</code></pre>
+<h3>使用 Chrome 的命令行参数来生成 PDF</h3>
+<pre><code>"C:\Users\a\AppData\Local\Google\Chrome\Application\chrome.exe" \
+    --headless=new \
+    --no-sandbox \
+    --disable-gpu \
+    --window-size=1920,1080 \
+    --ignore-certificate-errors \
+    --no-pdf-header-footer \
+    --print-to-pdf=f2h2h1.pdf \
+    "https://f2h2h1.github.io/"
+
+--headless：启用无头模式，无需 GUI 环境即可运行。
+--no-sandbox：禁用沙盒模式，某些环境下可能需要此选项以避免权限问题。
+--disable-gpu：禁用 GPU 硬件加速，有助于在不支持 GPU 或驱动有问题的系统上提高稳定性。
+--window-size：设置浏览器窗口大小，这对于页面布局可能很重要。
+--print-to-pdf：指定输出的 PDF 文件名和路径。
+--incognito：使用无痕模式打开页面
+--ignore-certificate-errors 忽略证书错误
+--timeout 定义了最长等待时间（以毫秒为单位）
+--no-pdf-header-footer 不要页眉 不要页脚
+最后一个参数是需要导出为 PDF 的网页 URL。
+
+--headless=new
+这个参数可以用新的headless模式，生成的pdf能保留更多的css样式。但笔者认为还是旧模式生成的pdf好看一点
+
+--virtual-time-budget
+在某种程度上对于任何具有时效性的代码（例如，setTimeout/setInterval），虚拟时间可充当“快进”。
+它会强制浏览器尽快执行相应网页的任何代码，同时让网页相信时间实际上会经过。
+下面展示了如何捕获网页在 42 秒后的状态并将其保存为 PDF 格式：
+chrome --headless=new --print-to-pdf --virtual-time-budget=42000 https://mathiasbynens.be/demo/time
+
+</code></pre>
+<p>导出 html 代码或截图，就把 --print-to-pdf 替换成 --dump-dom 或 --screenshot 。
+如果pdf输出的路径不是绝对路径，那么pdf可能会生成在chrome 的安装根目录下， 要确保浏览器在对应的目录有写入的权限。
+edge 也可以用类似的命令，但火狐却没有生成PDF的命令</p>
+<h3>使用 Playwright 生成 PDF</h3>
 <h2>PS</h2>
-<p>Opera 浏览器（77.0.4054.203）有一个把页面另存为 PDF 的功能（不是打印预览），几乎可以把页面的样式完整地保留下来（不是打印的样式就是当前渲染的样式）而且还能保持 a 标签的链接。但只能通过图形界面操作，没有命令行参数，也不能通过 Playwright 这类工具来操作浏览器生成。</p>
-<p>可以弄一个单独的 Windows 服务器，用 autoit 这类工具操作 Opera 浏览器把页面另存为 PDF 。</p>
+<p>Opera 浏览器（77.0.4054.203）有一个把页面另存为 PDF 的功能（不是打印预览），几乎可以把页面的样式完整地保留下来（不是打印的样式就是当前渲染的样式）而且还能保持 a 标签的链接。但只能通过图形界面操作，没有命令行参数，也不能通过 Playwright 这类工具来操作浏览器生成。
+可以弄一个单独的 Windows 服务器，用 autoit 这类工具操作 Opera 浏览器把页面另存为 PDF 。</p>
+<p>Adobe Acrobat 的浏览器扩展也可以生成 PDF ，但这个扩展似乎需要在系统里安装 Adobe Acrobat ，
+Adobe Acrobat 似乎没有免费的版本，虽然破解版也不是不能用，但商业使用的话始终有风险</p>
+<ul>
+<li>https://helpx.adobe.com/cn/acrobat/using/converting-web-pages-pdf.html</li>
+<li>https://helpx.adobe.com/cn/acrobat/kb/acrobat-pro-edge-extension.html</li>
+<li>https://helpx.adobe.com/cn/acrobat/kb/install-acrobat-pro-chrome-extension.html</li>
+</ul>
 <p>save as pdf 和 pirnt to pdf 是不一样的，
-具体区别还不清楚，其中一个区别是 save as pdf 里的文字是可以选中的， save as pdf 可以保留链接</p>
-<p>https://community.adobe.com/t5/framemaker-discussions/quot-save-as-pdf-quot-vs-quot-print-quot-as-pdf/m-p/3571101</p>
-<p>https://answers.microsoft.com/en-us/msoffice/forum/all/save-as-pdf-vs-print-to-pdf-quality-issues/28c536c6-6fb2-4484-b28b-1e15ce4aac75</p>
-<p>thead 标签可以在表格被分页时，每一页都保持一个表头</p>
+具体区别还不清楚，其中一个区别是 save as pdf 里的文字是可以选中的， save as pdf 可以保留链接
+thead 标签可以在表格被分页时，每一页都保持一个表头</p>
+<ul>
+<li>https://community.adobe.com/t5/framemaker-discussions/quot-save-as-pdf-quot-vs-quot-print-quot-as-pdf/m-p/3571101</li>
+<li>https://answers.microsoft.com/en-us/msoffice/forum/all/save-as-pdf-vs-print-to-pdf-quality-issues/28c536c6-6fb2-4484-b28b-1e15ce4aac75</li>
+</ul>
