--- a/kexizeroing.github.io/Algorithm Basics.html
+++ b/kexizeroing.github.io/Algorithm Basics.html
@@ -116,21 +116,7 @@ function bubbleSortWithFlag(nums) {
 }
 </code></pre>
 <h3>Quick Sort</h3>
-<pre><code class="language-js">function partition(arr, lo, hi) {
-  const pivot = arr[hi];
-  let i = lo;
-  for (let j = lo; j &lt; hi; j++) {
-    if (arr[j] &lt;= pivot) {
-      [arr[i], arr[j]] = [arr[j], arr[i]];
-      i++;
-    }
-  }
-  
-  [arr[i], arr[hi]] = [arr[hi], arr[i]];
-  return i;
-}
-
-function quickSort(arr, lo, hi) {
+<pre><code class="language-js">function quickSort(arr, lo, hi) {
   if (lo &gt;= hi) {
     return;
   }
@@ -139,22 +125,23 @@ function quickSort(arr, lo, hi) {
   quickSort(arr, pivot + 1, hi);
 }
 
-// Another way to do the partition with two pointers
 function partition(nums, left, right) {
-  let i = left, j = right;
-  while (i &lt; j) {
-    while (i &lt; j &amp;&amp; nums[j] &gt;= nums[left]) {
-      j -= 1;
+  let pivot = nums[left]
+  
+  while (left &lt; right) {
+    while (left &lt; right &amp;&amp; nums[right] &gt;= pivot) {
+      right--;
     }
-    while (i &lt; j &amp;&amp; nums[i] &lt;= nums[left]) {
-      i += 1;
-    }
+    nums[left] = nums[right];
 
-    this.swap(nums, i, j);
+    while (left &lt; right &amp;&amp; nums[left] &lt;= pivot) {
+      left++;
+    }
+    nums[right] = nums[left];
   }
 
-  this.swap(nums, i, left);
-  return i;
+  nums[left] = pivot;
+  return left;
 }
 </code></pre>
 <blockquote>
@@ -341,8 +328,7 @@ function shuffleArray(arr) {
 // Note that sorting is an `O(N log N)` operation where the Fisher-Yates algorithm is `O(N)`.
 </code></pre>
 <h3>Traverse Binary Tree</h3>
-<pre><code class="language-js">// iterative pre-order and in-order traversal
-var preorderTraversal = function(root) {
+<pre><code class="language-js">var preorderTraversal = function(root) {
   if (root == null) return [];
   let stack = [];
   let result = [];
@@ -380,51 +366,84 @@ var inorderTraversal = function(root) {
   return result;
 };
 
-// Level-Order traversal
-var levelOrderTraversal = function(root) {
-  if (!root) return [];
+var postorderTraversal = function (root) {
+  if (root == null) return [];
+  
   let result = [];
-  let queue = [root, null];
-  let levelNodes = [];
+  let stack = [root];
+  let cur = null;
 
-  while (queue.length) {
-    const t = queue.shift();
+  while (stack.length) {
+    cur = stack.pop();
+    result.push(cur.val);
+    cur.left &amp;&amp; stack.push(cur.left);
+    cur.right &amp;&amp; stack.push(cur.right);
+  }
+  return result.reverse();
+};
 
-    if (t) {
-      levelNodes.push(t.val)
-      if (t.left) {
-        queue.push(t.left);
+var levelOrderTraversal = function(root) {  
+  if (!root) return [];
+
+  const nodeQueue = [root];
+  let result = [];
+
+  while (nodeQueue.length) {
+    const size = nodeQueue.length;
+    const level = [];
+
+    for (let i = 0; i &lt; size; i++) {
+      const curNode = nodeQueue.shift();
+      level.push(curNode.val);
+
+      if (curNode.left) {
+        nodeQueue.push(curNode.left);
       }
-      if (t.right) {
-        queue.push(t.right);
-      }
-    } else {
-      result.push(levelNodes);
-      levelNodes.length = 0 ;
-      if (queue.length &gt; 0) {
-        queue.push(null)
+      if (curNode.right) {
+        nodeQueue.push(curNode.right);
       }
     }
+    result.push(level);
   }
 
   return result;
 };
+</code></pre>
+<pre><code class="language-js">// Max and Min depth of Binary Tree
+var maxDepth = function(root) {
+  if (!root) return 0;
 
-// backtracking with path
-function preOrder(root, path, res) {
-  if (root === null) {
-    return;
+  const left = maxDepth(root.left);
+  const right = maxDepth(root.right);
+
+  return Math.max(left, right) + 1;
+}
+
+var minDepth = function(root) {
+  if (!root) return 0;
+  
+  const nodeQueue = [root];
+  let depth = 0;
+
+  while (nodeQueue.length) {
+    const size = nodeQueue.length;
+    depth++;
+
+    for (let i = 0; i &lt; size; i++) {
+      const curNode = nodeQueue.shift();
+      // If it's a leaf node, return the depth
+      if (!curNode.left &amp;&amp; !curNode.right) {
+        return depth;
+      }
+      if (curNode.left) {
+        nodeQueue.push(curNode.left);
+      }
+      if (curNode.right) {
+        nodeQueue.push(curNode.right);
+      }
+    }
   }
-  path.push(root);
-
-  // i.e. to find the node which has value 7
-  if (root.val === 7) {
-    res.push([...path]);
-  }
-
-  preOrder(root.left, path, res);
-  preOrder(root.right, path, res);
-  path.pop();
+  return depth;
 }
 </code></pre>
 <h3>Graph DFS</h3>
@@ -635,6 +654,36 @@ let coinChange = function(coins, amount) {
   }
 
   return dp[dp.length - 1] === Number.MAX_VALUE ? -1 : dp[dp.length - 1];
+};
+</code></pre>
+<pre><code class="language-js">// Given two strings text1 and text2, return the length of their longest common subsequence.
+// Input: text1 = "abcde", text2 = "ace" 
+// Output: 3. The longest common subsequence is "ace" and its length is 3.
+let longestCommonSubsequence = function(text1, text2) {
+  let m = text1.length;
+  let n = text2.length;
+  // dp[i][j] means the LCS of first i characters in text1 and first j characters in text2
+  let dp = Array.from(Array(m + 1), () =&gt; Array(n + 1).fill(0));
+  
+  dp[0][0] = 0;
+  for (let i = 0; i &lt;= m; i++) {
+    dp[i][0] = 0;
+  }
+  for (let j = 0; j &lt;= n; j++) {
+    dp[0][j] = 0;
+  }
+
+  for (let i = 1; i &lt;= m; i++) {
+    for (let j = 1; j &lt;= n; j++) {
+      if (text1[i - 1] === text2[j - 1]) {
+        dp[i][j] = dp[i - 1][j - 1] + 1;
+      } else {
+        dp[i][j] = Math.max(dp[i - 1][j], dp[i][j - 1]);
+      }  
+    }
+  }
+
+  return dp[m][n];
 };
 </code></pre>
 <h3>LRU</h3>
@@ -854,6 +903,48 @@ function isSame(dict1, dict2) {
   return true;
 }
 </code></pre>
+<p>Given a string s, return the longest palindromic substring in s.</p>
+<pre><code class="language-js">var longestPalindrome = function(s) {
+  let left = 0, right = 0, maxLength = 0;
+
+  const extend = (s, i, j, n) =&gt; {
+    while (i &gt;= 0 &amp;&amp; j &lt; n &amp;&amp; s[i] === s[j]) {
+      if (j - i + 1 &gt; maxLength) {
+        left = i;
+        right = j;
+        maxLength = j - i + 1;
+      }
+
+      i--;
+      j++;
+    }
+  }
+
+  for (let i = 0; i &lt; s.length; i++) {
+    extend(s, i, i, s.length);     // i is the center
+    extend(s, i, i + 1, s.length); // i and i + 1 are the center
+  }
+
+  return s.slice(left, right + 1);
+};
+</code></pre>
+<p>Given an array of integers temperatures represents the daily temperatures, return an array answer such that <code>answer[i]</code> is the number of days you have to wait after the <code>ith</code> day to get a warmer temperature. If there is no future day for which this is possible, keep <code>answer[i] == 0</code> instead.</p>
+<pre><code class="language-js">var dailyTemperatures = function(temperatures) {
+  let stack = [];
+  let res = new Array(temperatures.length).fill(0);
+
+  for (let i = 0; i &lt; temperatures.length; i++) {
+    while (stack.length &gt; 0 &amp;&amp; temperatures[i] &gt; temperatures[stack[stack.length - 1]]) {
+      let preIndex = stack.pop();
+      res[preIndex] = i - preIndex;
+    }
+    // push the index, not the value
+    stack.push(i);
+  }
+
+  return res;  
+};
+</code></pre>
 <p>Given an array of integers and an integer <code>k</code>, you need to find the total number of continuous subarrays whose sum equals to <code>k</code>. For example, Input: nums = <code>[1,1,1]</code>, k = 2; Output: 2</p>
 <pre><code class="language-js">// the sum of subarray can be get by `sum[0,j] - sum[0,i]`
 var subarraySum = function(nums, k) {
@@ -887,18 +978,6 @@ var subarraySum = function(nums, k) {
     map.set(num, i);
   }
   return false;
-};
-</code></pre>
-<p>Given a sorted array nums, remove the duplicates in-place such that each element appear only once and return the new length. You must do this by modifying the input array in-place.</p>
-<pre><code class="language-js">var removeDuplicates = function(nums) {
-  let p = 0;
-  for (let q = 0; q &lt; nums.length; q++) {
-    if (nums[q] !== nums[p]) {
-      p++;
-      nums[p] = nums[q]
-    }   
-  }
-  return p + 1;
 };
 </code></pre>
 <p>Given an array nums, write a function to move all 0's to the end of it while maintaining the relative order of the non-zero elements. You must do this in-place without making a copy of the array.</p>
@@ -1018,31 +1097,68 @@ function checkPerfectSquare(num) {
   return res;  
 };
 </code></pre>
-<p>Given a binary tree, find its maximum depth. The maximum depth is the number of nodes along the longest path from the root node down to the farthest leaf node.</p>
-<pre><code class="language-js">var maxDepth = function(root) {
-  if (!root) return 0;
-  if (!root.left &amp;&amp; !root.right) return 1;
-
-  let cur = root;
-  let queue = [root, null];
-  let depth = 1;
-	
-  while (queue) {
-    const cur = queue.shift();
-
-    if (cur === null) {
-      if (queue.length === 0) return depth;
-      depth++;
-      queue.push(null);
+<p>Given a binary search tree (BST), find the lowest common ancestor node of two given nodes in the BST.</p>
+<pre><code class="language-js">var lowestCommonAncestor = function(root, p, q) {
+  // (root.val - p.val) * (root.val - q.val) &gt; 0, means p, q at same side
+  // (root.val - p.val) * (root.val - q.val) &lt; 0, means p, q at different side
+  while (root.value - p.value &gt; 0 &amp;&amp; root.value - q.value &gt; 0) {
+    if (p.val &lt; root.val) {
+      root = root.left;
     } else {
-      if (cur.left) queue.push(cur.left);
-      if (cur.right) queue.push(cur.right);	
+      root = root.right;
     }
   }
+  
+  return root;
+};
+</code></pre>
+<p>Construct binary tree from pre-order and in-order traversal.</p>
+<pre><code class="language-js">var buildTree = function(preorder, inorder) {
+  if (preorder.length === 0) {
+     return null;
+  }
+
+  const root = new TreeNode(preorder[0]);
+  const mid = inorder.indexOf(preorder[0]);
+
+  root.left = buildTree(preorder.slice(1, mid + 1), inorder.slice(0, mid));
+  root.right = buildTree(preorder.slice(mid + 1), inorder.slice(mid + 1));
+
+  return root;
+};
+</code></pre>
+<p>Given the root of a binary tree, determine if it is a valid binary search tree.</p>
+<pre><code class="language-js">var isValidBST = function(root) {
+  const helper = (root, min, max) =&gt; {
+    if (!root) return true;
+    
+    if (root.val &lt; min || root.val &gt; max) return false;
+    
+    return helper(root.left, min, root.val) &amp;&amp; helper(root.right, root.val, max);
+  }
+
+  return helper(root, -Infinity, Infinity);
 };
 </code></pre>
 <p>Given a 2d grid map of '1's (land) and '0's (water), count the number of islands. An island is surrounded by water and is formed by connecting adjacent lands horizontally or vertically. You may assume all four edges are all surrounded by water.</p>
-<pre><code class="language-js">function dfs(grid, i, j, rows, cols) {
+<pre><code class="language-js">var numIslands = function(grid) {
+  let count = 0;
+  const rows = grid.length;
+  if (rows === 0) return 0;
+  const cols = grid[0].length;
+  
+  for (let i = 0; i &lt; rows; i++) {
+    for (let j = 0; j &lt; cols; j++) {
+      if (grid[i][j] === '1') {
+        dfs(grid, i, j, rows, cols);  
+        count++;
+      }
+    }
+  }
+  return count;
+};
+
+function dfs(grid, i, j, rows, cols) {
   if (i &lt; 0 || j &lt; 0 || i &gt; rows - 1 || j &gt; cols - 1 || grid[i][j] === '0')
     return;
 
@@ -1053,22 +1169,4 @@ function checkPerfectSquare(num) {
   dfs(grid, i - 1, j, rows, cols);
   dfs(grid, i, j - 1, rows, cols);
 }
-
-var numIslands = function(grid) {
-  let count = 0;
-  const rows = grid.length;
-  if (rows === 0) return 0;
-  const cols = grid[0].length;
-  
-  for (let i = 0; i &lt; rows; i++) {
-    for (let j = 0; j &lt; cols; j++) {
-      if (grid[i][j] === '1') {
-        // call one dfs to find all the connected area `grid[i][j]` can reach
-        dfs(grid, i, j, rows, cols);  
-        count++;
-      }
-    }
-  }
-  return count;
-};
 </code></pre>
