--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -85,6 +85,8 @@ order: 2</h2>
 <p>See Core Web Vitals and PageSpeed Insights results simply and easily: https://page-speed.dev</p>
 <p>Feature management for developers with GitOps: https://github.com/featurevisor/featurevisor</p>
 <p>Awesome Web Apps that work without login: https://github.com/aviaryan/awesome-no-login-web-apps</p>
+<p>A powerful media downloader with no bullshit: https://cobalt.tools</p>
+<p>A high-performance HTTP benchmarking tool written in Golang: https://github.com/six-ddc/plow</p>
 <hr/>
 <h2>CSS related</h2>
 <p>Modern CSS Solutions for Old CSS Problems: https://moderncss.dev</p>
@@ -240,6 +242,7 @@ order: 2</h2>
 <p>Run Hugging Face Transformers directly in the browser: https://github.com/xenova/transformers.js</p>
 <p>Framework for Multi AI Agents Systems: https://github.com/joaomdmoura/crewai</p>
 <p>A collection of guides and examples for the Gemini API: https://github.com/google-gemini/cookbook</p>
+<p>Hands on with the Vercel AI SDK: https://github.com/nicoalbanese/ai-sdk-fundamentals</p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Stanford CS229 Machine Learning: https://cs229.stanford.edu</p>
