--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -194,4 +194,6 @@ html {
 </li>
 <li><p>The <code>white-space</code> CSS property sets how white space inside an element is handled. By default, the sequences of white space are collapsed. Newline characters in the source are handled the same as other white space. Use <code>white-space: pre-wrap;</code> to preserve spaces, tabs, and new lines.</p>
 </li>
+<li><p>The <code>:user-valid</code> and <code>:user-invalid</code> pseudo-class selectors are similar to the existing <code>:valid</code> and <code>:invalid</code> pseudo-classes. Both match a form control based on whether its current value satisfies its validation constraints. However, the advantage of the new <code>:user-valid</code> and <code>:user-invalid</code> pseudo-classes is that they match a form control only after a user has significantly interacted with the input. A form control that is required and empty will match <code>:invalid</code> even if a user has not started interacting with the page. However, that same form control won't match <code>:user-invalid</code> until the user has changed the input and left it in an invalid state.</p>
+</li>
 </ul>
