--- a/kexizeroing.github.io/Mac terminal.html
+++ b/kexizeroing.github.io/Mac terminal.html
@@ -284,6 +284,7 @@ Experimental support for the M1 architecture was added in node.js v15.3 and full
 | netstat -P tcp | 显示特定传输协议的状态
 | cat /etc/hosts | 管理 IP 地址和主机名之间的映射
 | cat /etc/resolv.conf | DNS 客户机配置文件
+| nohup command &amp; | 使命令永久的在后台执行（不挂断且前台可交互）
 |</p>
 <p>System Information Library for Node.js: https://systeminformation.io</p>
 <pre><code class="language-js">import { cpu, osInfo } from "systeminformation";
