--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -55,6 +55,7 @@ new Vue({
 <li>Webpack 5 boilerplate: https://github.com/taniarascia/webpack-boilerplate</li>
 <li>Create App: https://createapp.dev/webpack</li>
 <li>Professional front-end template: https://github.com/h5bp/html5-boilerplate</li>
+<li>A case study of CSR with Webpack setup: https://github.com/theninthsky/client-side-rendering</li>
 <li>Webpack articles: https://blog.jakoblind.no/tags/webpack</li>
 </ul>
 <h4>filename and chunkFilename</h4>
