--- a/kexizeroing.github.io/Rendering performance.html
+++ b/kexizeroing.github.io/Rendering performance.html
@@ -157,6 +157,7 @@ window.performance.getEntriesByType('resource')
 <blockquote>
 <ol>
 <li>Speculation rules can be statically included in the page's HTML, or dynamically inserted into the page by JavaScript based on application logic.</li>
+<li>Speculation rules are for full page navigations, not SPAs. SPAs can still benefit for the initial load.</li>
 <li>Prerendering does use additional memory and network bandwidth. Be careful not to over-prerender, at a cost of user resources. Only prerender when there is a high likelihood of the page being navigated to.</li>
 <li>At present, speculation rules are restricted to pages opened within the same tab, but we are working to reduce that restrictions. By default prerender is restricted to same-origin pages.</li>
 </ol>
