--- a/sund.site/Hello.html
+++ b/sund.site/Hello.html
@@ -1,7 +1,7 @@
 <h2><a href="https://github.com/stevedsun/stevedsun.github.io/blob/master/content/about/index.md">仓库源文</a>，<a href="https://sund.site/about/index">站点原文</a></h2>
 <hr/>
 <h2>title: "Hello"</h2>
-<p><img alt="%profile%" src="/images/g.gif"/></p>
+<p><img alt="%profile%" src="/images/g.png"/></p>
 <p>I'm <strong>Steve Sun</strong>, a full-stack software engineer based in <strong>Chengdu, China</strong>.</p>
 <p>I used to work for <a href="https://www.thoughtworks.com/">ThoughtWorks</a> and <a href="https://www.siemens.com/global/en.html">Siemens</a>. Now, I'm focusing on <strong>industrial edge</strong> and <strong>distributed system</strong>.</p>
 <p>On this site, I share my favorite books, articles and opinions.</p>
