--- a/f2h2h1.github.io/开发Magento2的模块.html
+++ b/f2h2h1.github.io/开发Magento2的模块.html
@@ -2200,6 +2200,31 @@ lib\web\mage\mage.js
 
 /** @var \Magento\Framework\View\TemplateEngine\Php $this */
 
+在 phtml 文件里获取其它 block
+/** @var \Magento\Cms\Block\Page */
+$cmsBlockPage = $block-&gt;getLayout()-&gt;createBlock(\Magento\Cms\Block\Page::class);
+
+在 phtml 文件里获取配置
+$scopeConfig = $block-&gt;getConfig();
+$value = $scopeConfig-&gt;getValue('configPath', 'scope_store');
+需要在 block 里暴露 scopeConfig 对象
+/**
+ * @return \Magento\Framework\App\Config\ScopeConfigInterface
+ */
+public function getConfig()
+{
+    return $this-&gt;scopeConfig;
+}
+
+在 phtml 文件里获取 cms 页面的html代码
+/** @var \Magento\Cms\Block\Page */
+$cmsBlockPage = $block-&gt;getLayout()-&gt;createBlock(\Magento\Cms\Block\Page::class);
+$cmsBlockPage-&gt;unsetData('page');
+$cmsBlockPage-&gt;setData('page_id', 'page_id');
+// $cmsBlockPage-&gt;setData('page_id', $block-&gt;getConfig()-&gt;getValue(\Magento\Cms\Helper\Page::XML_PATH_NO_ROUTE_PAGE)); // 获取默认的404页面
+$cmsPage = $cmsBlockPage-&gt;getPage();
+printf('&lt;h1&gt;%s&lt;/h1&gt;%s', $cmsPage-&gt;getContentHeading(), $cmsPage-&gt;getContent());
+
 
 magento2 的分层
 表示层 -&gt; 就是前端 + 控制器
