--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -67,6 +67,7 @@ order: 2</h2>
 <p>PPTist: https://github.com/pipipi-pikachu/PPTist</p>
 <p>Web based macOS and Windows XP desktop recreation: https://macos-web.app, https://winxp.vercel.app</p>
 <p>Windows 11 in React: https://github.com/blueedgetechno/win11React</p>
+<p>Windows 95 style UI component library for React: https://github.com/react95-io/React95</p>
 <p>Discover the apps everyone is docking about: https://www.dockhunt.com</p>
 <p>Chrome-style tabs in HTML/CSS: https://github.com/adamschwartz/chrome-tabs</p>
 <p>The Steve Jobs Archive: https://stevejobsarchive.com</p>
