--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -16,6 +16,8 @@ updatedDate: "May 5 2024"</h2>
 </li>
 <li><p>When an element has a <code>position</code> value of <code>absolute</code>, it becomes a block-level element by default. This means that adding <code>inline-block</code> or <code>block</code> as the display type won’t affect it at all.</p>
 </li>
+<li><p>The <code>&lt;p&gt;</code> element represents a paragraph. It cannot contain block-level elements (including <code>&lt;p&gt;</code> itself).</p>
+</li>
 <li><p>When you apply a <code>float</code> to an element with a display type of <code>flex</code> or <code>inline-flex</code>, it won’t affect the element at all.</p>
 </li>
 <li><p>Say you have two elements, the one above with <code>margin-bottom</code>, and the one below with <code>margin-top</code>. The greater of the two values will be used as the margin between the elements, and the other will be ignored by the browser.</p>
@@ -193,7 +195,5 @@ html {
 <li><p><code>text-underline-offset</code> sets the offset distance of an underline text decoration line from its original position. All browsers support this property. Note that it is not part of the <code>text-decoration</code> shorthand.</p>
 </li>
 <li><p>The <code>white-space</code> CSS property sets how white space inside an element is handled. By default, the sequences of white space are collapsed. Newline characters in the source are handled the same as other white space. Use <code>white-space: pre-wrap;</code> to preserve spaces, tabs, and new lines.</p>
-</li>
-<li><p>The <code>:user-valid</code> and <code>:user-invalid</code> pseudo-class selectors are similar to the existing <code>:valid</code> and <code>:invalid</code> pseudo-classes. Both match a form control based on whether its current value satisfies its validation constraints. However, the advantage of the new <code>:user-valid</code> and <code>:user-invalid</code> pseudo-classes is that they match a form control only after a user has significantly interacted with the input. A form control that is required and empty will match <code>:invalid</code> even if a user has not started interacting with the page. However, that same form control won't match <code>:user-invalid</code> until the user has changed the input and left it in an invalid state.</p>
 </li>
 </ul>
