--- a/kexizeroing.github.io/Get started with LangChain.html
+++ b/kexizeroing.github.io/Get started with LangChain.html
@@ -15,6 +15,7 @@ updatedDate: "May 12 2024"</h2>
 <li>Tutorials on building LLM powered applications: https://www.youtube.com/playlist?list=PLqZXAkvF1bPNQER9mLmDbntNfSpzdDIU5</li>
 <li>LangChain JS Tutorial: https://www.youtube.com/playlist?list=PL4HikwTaYE0EG379sViZZ6QsFMjJ5Lfwj</li>
 <li>Flowise AI Tutorial: https://www.youtube.com/playlist?list=PL4HikwTaYE0H7wBxhvQqxYcKOkZ4O3zXh</li>
+<li>Chat LangChain: https://chat.langchain.com</li>
 </ul>
 <p>&lt;img alt="langchain-components" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vOhrAly1hct713lr8nj314q0u0dmp.jpg" width="650"&gt;</p>
 <h3>Components: Building Blocks of LangChain</h3>
