--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -186,9 +186,11 @@ source-map-explorer -h
 <li><code>eslint-config-prettier</code> is the config that turns off all formatting rules. It's recommended by Prettier to be used together with Prettier. You'd still use Prettier itself to actually do the formatting. (Add explicit <code>yarn prettier --check .</code> to CI.)</li>
 </ul>
 <p>If you don’t use a legacy ESLint shareable config that enables formatting rules, you probably don’t need <code>eslint-config-prettier</code>. Adding <code>eslint-config-prettier</code> at the end of the "extends" list doesn’t do anything if nothing enabled formatting rules to begin with.</p>
-<blockquote>
-<p>Back in the day, popular configs such as <code>eslint-config-airbnb</code> were often used to enable many rules at once. These configs were popular because they established a well-known, opinionated style guide and set of logical checks on code. Their downside was that they were too opinionated - even enabling formatting rules. <em>(Read from <a href="https://www.joshuakgoldberg.com/blog/you-probably-dont-need-eslint-config-prettier-or-eslint-plugin-prettier/">You Probably Don't Need eslint-config-prettier or eslint-plugin-prettier</a>)</em></p>
-</blockquote>
+<p>Check out the following resources:</p>
+<ol>
+<li><a href="https://www.joshuakgoldberg.com/blog/you-probably-dont-need-eslint-config-prettier-or-eslint-plugin-prettier/">You Probably Don't Need eslint-config-prettier or eslint-plugin-prettier</a></li>
+<li><a href="https://github.com/epicweb-dev/config">Reasonable ESLint, Prettier, and TypeScript configs</a></li>
+</ol>
 <h3>What is Husky</h3>
 <p>While working on an enterprise development team, it is important that all code linting and unit tests are passing before committing code, especially if you are using some form of continuous integration. <a href="https://githooks.com">Git Hooks</a> are a built-in feature of Git that can execute automatically when certain events occur. <strong>Husky</strong>, as a project, is a very popular npm package that allows custom scripts to be ran against your repository to prevent bad <code>git commit</code> and <code>git push</code>, which makes commits of fixing lint errors doesn't happen.</p>
 <p>Install husky <code>npm i -D husky</code> and have a "husky" section in the <code>package.json</code> file to add git hooks.</p>
