--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 49 个博客、8566 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 49 个博客、8568 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=kexizeroing.github.io/Practical%20considerations%20for%20Input%20fields.html>2024-06-05 Practical considerations for Input fields</a></li>
+
+<li><a href=xnum.github.io/lvremove%20%E9%81%87%E5%88%B0%20contains%20a%20filesystem%20in%20use.html>2024-06-05 lvremove 遇到 contains a filesystem in use</a></li>
 
 <li><a href=conge.livingwithfcs.org/2024%20%E4%BA%94%E6%9C%88%E8%AF%BB%E7%BB%8F%E6%B5%8E%E5%8D%B1%E6%9C%BA%EF%BC%8C%E5%BF%83%E7%90%86%E5%AD%A6%EF%BC%8C%E8%90%A5%E5%85%BB%E5%AD%A6%EF%BC%8C%E4%BA%86%E5%87%A1%E5%9B%9B%E8%AE%AD%EF%BC%8C%E8%AF%97%E6%AD%8C%EF%BC%8C%E7%A7%91%E5%B9%BB%E2%80%A6%E2%80%A610%20%E6%9C%AC.html>2024-06-04 2024 五月读经济危机，心理学，营养学，了凡四训，诗歌，科幻……10 本</a></li>
 
