--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 49 个博客、8568 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 49 个博客、8569 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=jasonkayzk.github.io/%E3%80%90%E7%BF%BB%E8%A8%B3%E3%80%91HANABI-Mr.Children-%E6%AD%8C%E8%A9%9E.html>2024-06-06 【翻訳】HANABI-Mr.Children-歌詞</a></li>
 
 <li><a href=kexizeroing.github.io/Practical%20considerations%20for%20Input%20fields.html>2024-06-05 Practical considerations for Input fields</a></li>
 
