--- a/kexizeroing.github.io/Learn from Advent of Vue 2022.html
+++ b/kexizeroing.github.io/Learn from Advent of Vue 2022.html
@@ -73,6 +73,12 @@ Normally, a Vue component is defined by a JavaScript object with various propert
 <li>Implicit dependencies. A component can use a data property defined in the mixin but a mixin can also use a data property it assumes is defined in the component. This can cause problems. What happens if we want to refactor a component later and change the name of a variable that the mixin needs?</li>
 </ol>
 <p>The key idea of the Composition API is that, rather than defining a component’s functionality as object properties, we define them as JavaScript variables that get returned from a new <code>setup</code> function. The clear advantage of the Composition API is that it’s easy to extract logic. It allows Vue to lean on the safeguards built into native JavaScript in order to share code, like passing variables to the composition function, and the module system.</p>
+<p>Composition API provides the same level of logic composition capabilities as React Hooks, but with some <a href="https://vuejs.org/guide/extras/composition-api-faq.html#comparison-with-react-hooks">important differences</a>:</p>
+<ul>
+<li>Composition API calls are also not sensitive to call order and can be conditional.</li>
+<li>Vue's runtime reactivity system automatically collects reactive dependencies used in computed properties and watchers.</li>
+<li>No need to manually cache callback functions to avoid unnecessary child updates.</li>
+</ul>
 <pre><code class="language-js">// useCounter.js
 // https://css-tricks.com/how-the-vue-composition-api-replaces-vue-mixins/
 import { ref, computed } from 'vue'
