--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -158,6 +158,7 @@ order: 2</h2>
 <p>OCR PDFs and images directly in your browser: https://tools.simonwillison.net/ocr</p>
 <p>Comlink makes WebWorkers enjoyable: https://github.com/GoogleChromeLabs/comlink</p>
 <p>Web component JS frameworks overview by their syntax and features: https://component-party.dev</p>
+<p>Javascript audio library for the modern web: https://github.com/goldfire/howler.js</p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: https://egghead.io/courses/the-beginner-s-guide-to-react or https://www.youtube.com/watch?v=7_x4AuqHxlg</p>
@@ -196,6 +197,7 @@ order: 2</h2>
 <p>Vue UI Component Library: https://primevue.org</p>
 <p>Integrate Clerk into your Vue application: https://vue-clerk.vercel.app</p>
 <p>Drag and drop components that support Vue2 and Vue3: https://alfred-skyblue.github.io/vue-draggable-plus</p>
+<p>Vue3 wrapper components for smooth-dnd: https://gilnd.github.io/vue3-smooth-dnd</p>
 <p>Vue.js and Nuxt Tips, Tricks and good practice: https://vuejstips.com</p>
 <hr/>
 <h2>Browsers related</h2>
@@ -231,7 +233,6 @@ order: 2</h2>
 <p>An alternative take on OpenAI Chat Completion API: https://gpt.pomb.us</p>
 <p>Create LlamaIndex App: https://www.npmjs.com/package/create-llama</p>
 <p>Get up and running with large language models locally: https://ollama.com</p>
-<p>Run AI with an API: https://replicate.com</p>
 <p>Fully client-side chat over documents: https://github.com/jacoblee93/fully-local-pdf-chatbot</p>
 <p>Real-time image generation with Latent Consistency: https://www.fal.ai/dynamic</p>
 <p>Get started with the Gemini API: https://ai.google.dev/gemini-api/docs</p>
@@ -241,9 +242,11 @@ order: 2</h2>
 <p>Pi, your personal AI from Inflection: https://pi.ai</p>
 <p>Power your apps with real-time speech-to-text APIs: https://deepgram.com</p>
 <p>Run Hugging Face Transformers directly in the browser: https://github.com/xenova/transformers.js</p>
-<p>Framework for Multi AI Agents Systems: https://github.com/joaomdmoura/crewai</p>
 <p>A collection of guides and examples for the Gemini API: https://github.com/google-gemini/cookbook</p>
 <p>Hands on with the Vercel AI SDK: https://github.com/nicoalbanese/ai-sdk-fundamentals</p>
+<p>AI agent stdlib that works with any LLM and AI SDK: https://github.com/transitive-bullshit/agentic</p>
+<p>An AI chatbot in Win95 style: https://wingpt.vercel.app</p>
+<p>Real-time in-browser speech recognition with OpenAI Whisper: https://huggingface.co/spaces/Xenova/realtime-whisper-webgpu</p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Stanford CS229 Machine Learning: https://cs229.stanford.edu</p>
