--- a/kexizeroing.github.io/Form validation with React Hook Form and Zod.html
+++ b/kexizeroing.github.io/Form validation with React Hook Form and Zod.html
@@ -65,6 +65,9 @@ type User = z.infer&lt;typeof User&gt;;
 // We will use this type to tell react-hook-form what our data should look like.
 type FormSchemaType = z.infer&lt;typeof formSchema&gt;;
 </code></pre>
+<blockquote>
+<p><a href="https://github.com/fabian-hiller/valibot">Valibot</a> is very similar to Zod, helping you validate data easily using a schema. The biggest difference is the modular design and the ability to reduce the bundle size to a minimum.</p>
+</blockquote>
 <h2>Implementing React Hook Form</h2>
 <p>Creating forms in React is a complex task. It involves handling all the input states and their changes and validating that input when the form gets submitted. The library <a href="https://www.react-hook-form.com">React Hook Form</a> comes with a custom hook named <code>useForm</code>, which will let us register our inputs, handle the form submission, and handle errors.</p>
 <p><a href="https://github.com/react-hook-form/resolvers">@hookform/resolvers</a> allows you to use any external validation library such as Yup, Zod, and many others. The goal is to make sure you can seamlessly integrate whichever validation library you prefer. If you're not using a library, you can always write your own logic to validate your forms.</p>
