--- a/kexizeroing.github.io/Some network knowledge (in Chinese).html
+++ b/kexizeroing.github.io/Some network knowledge (in Chinese).html
@@ -53,3 +53,12 @@ updatedDate: "July 12 2023"</h2>
 <blockquote>
 <p>Hosting in China does not immediately correlate to a faster, more performant website. This is because commonly used libraries, tools, and development practices, are incompatible with the Chinese internet framework. You can <a href="https://www.chinafy.com/tools/global-speed-test">test them from China</a> to see what happens, and read about the Chinafy process: <a href="https://www.chinafy.com/how-chinafy-works">How Chinafy Works</a>.</p>
 </blockquote>
+<blockquote>
+<p>应用部署在 Vercel 之后会自动生成一个以 <code>vercel.app</code> 为后缀的域名，但同时也支持自定义域名。我们可以在国内服务商购买域名，然后配合 Cloudflare 的域名解析，将在 Vercel 上部署的自带域名代理到自己购买的域名，这样就可以在国内访问 Vercel 应用了。</p>
+<ol>
+<li>阿里云/腾讯云购买域名</li>
+<li>在 Cloudflare 上添加站点，生成 DNS 地址。添加 CNAME 解析 重定向到 <code>vercel.app</code> 的域名</li>
+<li>在阿里云/腾讯云的域名管理中，修改 DNS 解析为 Cloudflare 上生成的地址</li>
+<li>把自己的应用在 Vercel 上部署，并添加上自定义域名</li>
+</ol>
+</blockquote>
