--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 49 个博客、8569 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 49 个博客、8571 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=luyuhuang.github.io/%E7%90%86%E6%83%B3%E5%9B%BD.html>2024-06-08 理想国</a></li>
 
 <li><a href=jasonkayzk.github.io/%E3%80%90%E7%BF%BB%E8%A8%B3%E3%80%91HANABI-Mr.Children-%E6%AD%8C%E8%A9%9E.html>2024-06-06 【翻訳】HANABI-Mr.Children-歌詞</a></li>
 
@@ -862,6 +864,8 @@
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202343%20-%2072%20%E5%B0%8F%E6%97%B6%E8%BD%BB%E6%96%AD%E9%A3%9F%E4%B8%80%E5%91%A8%E5%90%8E%E8%AE%B0.html>2023-11-01 折返点 2343 - 72 小时轻断食一周后记</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20332%20%E6%89%AB%E7%83%9F%E5%9B%B1.html>2023-10-31 新爸五年计划 - 332 扫烟囱</a></li>
+
+<li><a href=codeinchinese.com/%E5%8F%8C%E8%83%9E%E8%83%8E%E4%B8%BA%E4%BB%80%E4%B9%88%E8%A6%81%E7%A9%BF%E5%BE%97%E4%B8%80%E6%A8%A1%E4%B8%80%E6%A0%B7%EF%BC%8C%E7%9B%AE%E7%9A%84%E4%BD%95%E5%9C%A8%EF%BC%9F.html>2023-10-31 双胞胎为什么要穿得一模一样，目的何在？</a></li>
 
 <li><a href=xnum.github.io/%E4%BD%BF%E7%94%A81Password%E7%AE%A1%E7%90%86%E6%88%91%E7%9A%84SSH%E9%87%91%E9%91%B0.html>2023-10-31 使用1Password管理我的SSH金鑰</a></li>
 
