--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 49 个博客、8571 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 49 个博客、8573 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=yuanj.top/Seurat4%20%E4%B8%8E%205%20%E5%85%B1%E5%AD%98.html>2024-06-11 Seurat4 与 5 共存</a></li>
+
+<li><a href=yuanj.top/%E8%BF%98%E6%98%AF%20WSL%20%E8%88%92%E6%9C%8D%E4%B8%80%E7%82%B9%E3%80%82...html>2024-06-11 还是 WSL 舒服一点。..</a></li>
 
 <li><a href=luyuhuang.github.io/%E7%90%86%E6%83%B3%E5%9B%BD.html>2024-06-08 理想国</a></li>
 
