--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -306,20 +306,22 @@ function loadFile&lt;Formats extends URLObject&gt;(fileFormats: Formats, format:
 <p>Sometimes, you'll want to ignore an error that later down the line gets fixed. If you're using <code>@ts-ignore</code>, it'll just ignore the fact that the error is gone. But with <code>@ts-expect-error</code>, you'll actually get a hint that the directive is now safe to remove. So if you're choosing between them, pick <code>@ts-expect-error</code>.</p>
 <h2>Adding Type Check to JavaScript</h2>
 <p>TypeScript provides code analysis for JavaScript and VS Code gives us TypeScript out of the box (TypeScript language server). With the addition of <code>//@ts-check</code> as the very first line in our JavaScript file, TypeScript became active and started to add red lines to code pieces that just don’t make sense.</p>
-<p><code>JSDoc</code> is a way to annotate JavaScript code using comments. TypeScript uses this annotations to get more information on our intended types.</p>
+<p><a href="https://deno.com/blog/document-javascript-package">JSDoc</a> is a way to annotate JavaScript code using comments. JSDoc comments are any block comments that begin with <code>/**</code> and end with <code>*/</code> that precede a block of code. The comments can span multiple lines. Each line should start with <code>*</code> and should be indented by one space. JSDoc supports a variety of tags that can be used to provide additional information about your symbols, such as <code>@param</code> for parameters, <code>@returns</code> for the return value, or <code>@typeParam</code> for type parameters. TypeScript uses this annotations to get more information on our intended types.</p>
 <pre><code class="language-js">// @ts-check
 /**
-* @param {number} numberOne
-* @param {number} numberTwo
-* @returns {number}
-*/
-function addNumbers(numberOne, numberTwo) { return numberOne + numberTwo }
+ * @param {number} numberOne
+ * @param {number} numberTwo
+ * @returns {number}
+ */
+function addNumbers(numberOne, numberTwo) {
+  return numberOne + numberTwo
+}
 
 /**
-* @typedef {Object} ShipStorage 
-* @property {number} max
-* @property {string[]} items 
-*/
+ * @typedef {Object} ShipStorage 
+ * @property {number} max
+ * @property {string[]} items 
+ */
 
 /** @type ShipStorage */
 const storage = {
