--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -612,7 +612,6 @@ https://registry.npmmirror.com/antd/latest/files
 <li>如果安装 Electron 遇到问题，可以直接在 https://npmmirror.com/mirrors/electron/ 下载需要的版本，然后保存到本地缓存中 <code>~/Library/Caches/electron</code></li>
 <li>In the case of an electron app, the <code>electron</code> package is bundled as part of the built output. There is no need for your user to get <code>electron</code> from npm to use your built app. Therefore it matches well the definition of a <code>devDependency</code>. <em>(When you publish your package, if the consumer project needs other packages to use yours, then these must be listed as <code>dependencies</code>.)</em> For example, VS Code properly lists <code>electron</code> as a devDependency only: https://github.com/microsoft/vscode/blob/main/package.json</li>
 <li>In case you are using an unsupported browser, or if you have other specific needs (for example your application is in Electron), you can use the standalone <a href="https://devtools.vuejs.org/guide/installation.html#standalone">Vue devtools</a></li>
-<li>Vite + Electron 项目参考：https://github.com/liou666/polyglot</li>
 <li>Blank screen on builds, but works fine on serve. This issue is likely caused when Vue Router is operating in <code>history</code> mode. In Electron, it only works in <code>hash</code> mode.</li>
 </ol>
 <blockquote>
@@ -621,7 +620,12 @@ https://registry.npmmirror.com/antd/latest/files
 <li>hash mode 是默认模式，原理是使用 <code>location.hash</code> 和 <code>onhashchange</code> 事件，利用 <code>#</code> 后面的内容不会被发送到服务端实现单页应用。history mode 要手动设置 <code>mode: 'history'</code>, 是基于 History API 来实现的，这也是浏览器本身的功能，地址不会被请求到服务端。</li>
 </ul>
 </blockquote>
-<ol start="6">
+<ol start="5">
 <li>关于 Icon 图标，Windows（.ico 文件）和 Mac（.icns 文件）的都是复合格式，包含了多种尺寸和颜色模式，Linux 就是多张 png。注意不要把 png 直接改成 ico，可以使用在线工具转换。如果 Windows 窗口或任务栏图标未更换成功，可能是 ico 文件中缺少小尺寸图标，如缺少 16x16 或 32x32 的图标。</li>
 <li>可以通过命令行启动程序，查看打包后的主进程日志，Mac 进入到 <code>/Applications/Demo.app/Contents/MacOS/</code> 路径，执行 <code>./Demo</code> 启动应用层序。Windows 上打开 Powershell 进入到程序的安装目录，执行 <code>.\Demo.exe</code>，如果文件名中有空格，需要用双引号把文件名引起来。</li>
+<li>Electron 参考项目:<ul>
+<li>https://github.com/liou666/polyglot</li>
+<li>https://github.com/replit/desktop</li>
+</ul>
+</li>
 </ol>
