--- a/yuanj.top/抛弃 WSL2 使用 scoop 搭建开发环境.html
+++ b/yuanj.top/抛弃 WSL2 使用 scoop 搭建开发环境.html
@@ -38,8 +38,7 @@ scoop install windows-terminal
 </code></pre>
 <p><img alt="" src="https://images.yuanj.top/202404251248248.png"/></p>
 <p>官方的 buckets 里面只有少数的软件，而我们要想安装其它国人日常使用的软件就需要添加几个 buckets：</p>
-<pre><code class="language-bash">scoop bucket add scoopet https://github.com/ivaquero/scoopet
-scoop bucket add lemon https://github.com/hoilc/scoop-lemon
+<pre><code class="language-bash">scoop bucket add lemon https://github.com/hoilc/scoop-lemon
 scoop bucket add dorado https://github.com/chawyehsu/dorado
 </code></pre>
 <p>添加了这三个 buckets 的话，基本上就能安装所有日常使用的软件了，除了一些生物信息学软件和游戏之外，其他的软件我基本都用 scoop 装了，干净也方便~</p>
